--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://ootbingo.github.io/exploration-bingo",
   "dependencies": {
+    "oot-bingo-generator": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -31,7 +32,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -39,6 +39,7 @@
     "@types/node": "^12.12.35",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "gh-pages": "^2.2.0",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
   }
