--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://ootbingo.github.io/exploration-bingo",
   "dependencies": {
     "oot-bingo-generator": "^1.0.2",
+    "oot-bingo-lists": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -40,7 +41,12 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "gh-pages": "^2.2.0",
+    "prettier": "^2.6.2",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
+  },
+  "prettier": {
+    "printWidth": 100,
+    "tabWidth": 2
   }
 }
